# RustMusicPlayer

./: .gitignore  Cargo.toml  PKGBUILD  README.md  rust-music-player-lite.desktop
src/: main.rs
src/ui/: app.rs
